Fixed z-index

--- a/project-clock/public/styles.css
+++ b/project-clock/public/styles.css
@@ -17,6 +17,7 @@ body {
 
 header {
 
+    z-index: 1000;
     position: fixed;
     width: 100%;
 
